# bot_agape

./: Dockerfile  api_client.py  constants.py  main.py  main_menu.py  pyproject.toml  routers.py  start.py  utils.py
about_us/: routers.py
events/: callbacks.py  requests.py  routers.py  utils.py
shops/: callbacks.py  requests.py  routes.py  utils.py
users/: registration_users.py  routers.py  services.py  utils.py
