[project]
name = "bot-agape"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр Сотников",email = "aleksandr.sotnikov@osinit.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "bot_agape", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
